--- a/views/_partials/_header.ejs
+++ b/views/_partials/_header.ejs
@@ -31,6 +31,7 @@
             <%} else {%>
             <li class="main-header-item">
               <form action="/logout" method="POST">
+                <input type="hidden" name='_csrf' value="<%= csrfToken %>">
                 <button class="btn" type="submit">Logout</button>
               </form>
             </li>
