--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -20,8 +20,10 @@
     </div>
 
     <% if (editing) {%>
+      <input type="hidden" name='_csrf' value="<%= csrfToken %>">
       <input type="hidden" value="<%= product._id %>" name="productId">
     <% } %>
+    <input type="hidden" name='_csrf' value="<%= csrfToken %>">
     <button class="btn" type="submit"><% if (editing) { %> Update Product <% } else { %> Add Product <% } %></button>
   </form>
 </main>
